# Relay

./: .gitignore  .prettierignore  CONTRIBUTING.md  LICENSE  README.md  eslint.config.js  lefthook.yml  package.json  playwright.config.ts  pnpm-lock.yaml  vitest.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
scripts/: manual-smoke.md
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: bridge.rs  config.rs  lib.rs  log.rs  paths.rs  pipe.rs  pty.rs  session.rs  window_effects.rs
src-tauri/src/ssh/: client.rs  config.rs  keychain.rs  mod.rs  reconnect.rs
src-tauri/tests/: ssh_integration.rs
src/lib/: AppRoot.svelte  Modal.svelte  Pane.svelte  StatusBar.svelte  Terminal.svelte  app-root.css  config.svelte.ts  config.ts  logging.ts  modal.css  pane.css  pipe.ts  pty.ts  send.ts  sessions.ts  ssh.ts  status-bar.css  terminal.css  terminal.ts  urls.ts
src/lib/keybind/: actions.ts  combo.ts  conflicts.ts  dispatch.ts  matches.ts  resolve.ts
src/lib/layout/: Splitter.svelte  presets.ts  splitter.css  store.svelte.ts  tree.ts
src/lib/logging/: LogsPanel.svelte  logs-panel.css
src/lib/palette/: CommandPalette.svelte  actions.ts  fuzzy.ts  (+1 more)
src/routes/: +page.svelte
tests/: StatusBar.test.ts  _tauri-event-mock.ts  _xterm-mocks.ts  config.test.ts  page.test.ts  pane.test.ts  pty.test.ts  send.test.ts  sessions.test.ts  setup.ts  smoke.test.ts  ssh.test.ts  terminal.test.ts  urls.test.ts
tests/e2e/: boot.spec.ts  keybind.spec.ts  panes.spec.ts  send.spec.ts  session.spec.ts  theme.spec.ts
tests/keybind/: combo.test.ts  conflicts.test.ts  dispatch.test.ts  matches.test.ts
tests/layout/: Splitter.test.ts  presets.test.ts  store.test.ts  tree.test.ts
tests/logging/: LogsPanel.test.ts
tests/palette/: CommandPalette.test.ts  fuzzy.test.ts
tests/panes/: PanesPanel.test.ts
tests/pipe/: PipeRulesPanel.test.ts
tests/send/: SelectionChip.test.ts  SendPreviewModal.test.ts
tests/settings/: SettingsPanel.test.ts
tests/theme/: chrome.test.ts  presets.test.ts  resolve.test.ts
(+15 files in other folders)
